# Canonicalization

./: .gitignore
convnova/: logs  pyproject.toml  so.clean.obo
convnova/configs/: config.yaml
convnova/configs/canonicalization/: default.yaml
convnova/configs/dataset/: bert_hg38.yaml  hg38.yaml
convnova/configs/experiment/canon/: nt_benchmark.yaml  pretrain.yaml  pretrain_canonicalized.yaml
convnova/convnova.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
convnova/notebooks/: align_genomes.ipynb  check_template_gt_skew.ipynb  explore_gff.ipynb
convnova/scripts/: canonicalize_genome.ipynb  canonicalize_genomes.py  clean_obo_file.py  explore_gff.ipynb  index_reference_genome.sh  match_genomes.ipynb  nt_data.ipynb  prepare_nt_data.py
convnova/src/dataloaders/datasets/: nucleotide_transformer_dataset.py
convnova/src/utils/: canonicalization.py
convnova/tests/: test_canonicalization.py  test_canonicalization_logic.py  test_canonicalization_parsing.py  test_interval_tree.py
